# xAGI

./: README.md  ideas.md  rl_ppo_lunarlander.ipynb  xGradient.ipynb
.ipynb_checkpoints/: rl_ppo_lunarlander-checkpoint.ipynb  xGradient-checkpoint.ipynb  xNerual-checkpoint.ipynb
AIGC_CORE/: AIGC_CORE.py  AIGC_CORE_OTHER_MODAL.py  MIT_AIGC.md  scikit-learn.py
AIGC_CORE/AUTO_ENCODER_CORE/: AIGC_CORE_OTHER_MODAL.py  DECODER_CORE.py  MIT_AIGC.md
AIGC_CORE/STABLE_DIFFUSIOM/: AIGC_IMAGE_CORE.ipynb
CONSCIOUS_CORE/: CONSCIOUS_CORE.md
CORE/SLAM_CORE/: SLAM_KEY_POINT.md  change_kalman_filter.py
CORE/SLAM_CORE/least_square/point_to_plane/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  slam_core.cpp
GPT/: GPT2_gated.py  GPT2_prune.py  cut_plane_any_degree.py  gpt2.ipynb  rich_dad_poor_dad.txt  softmax.py
GPT/.ipynb_checkpoints/: gpt2-checkpoint.ipynb
GPT/GPT_AGI/: GPT_for_AGI.ipynb  rich_dad_poor_dad.txt
GPT/intuition/: 7_habits.txt  GPT_for_AGI.ipynb  (+3 more)
MLE_CORE/: MLE_CORE.py  SCIPY_MLE_CORE.py
NeRF/: NeRF.ipynb
STABLE_DIFFUSION_CORE/: stable_diffusion_core.ipynb
diffusion/: image_56x56.ipynb
dino/: dino_view.ipynb  instruction.md  training_data.md
gaussian_spltting/: instruction.md
llama-agent/: instruction.md  llama_agent.py
llama3.1_prune/: Distillation.py  Modelfile  QLoRA.py  QLoRA[4].py  QLoRA_run[5].py  change_llama3.1_into_huggingface[3].py  deepspeed_config.json  effective.py  instruction.md  llama3.1_prune.py  llama3.1_t-sne_cut_plane.py  original_size.py  sparse.py  statistic.py  structured_sparse.py  t-SNE.py  t-SNE_2.py
(+85 files in other folders)
